--- a/css/home.css
+++ b/css/home.css
@@ -424,40 +424,40 @@
             border: 1px solid var(--white_a700_7f);
             transition: all 0.3s ease-in-out;
             padding: 12px;
-  
+
             & * {
               height: auto;
             }
-  
+
             @media only screen and (max-width: 768px) {
               grid-column: span 1;
             }
-  
+
             &.open {
               border-color: white;
               color: white !important;
-  
+
               .button {
                 img {
                   transform: rotate(180deg);
                 }
               }
-  
+
               .dropdown__menu {
                 max-height: 1000%;
                 border-width: 1px;
               }
             }
-  
+
             .button {
               display: flex;
               justify-content: space-between;
-  
+
               img {
                 transition: all 0.2s ease-in-out;
               }
             }
-  
+
             .dropdown__menu {
               max-height: 0%;
               overflow: hidden;
@@ -473,12 +473,12 @@
               border: 0px solid #ddd;
               border-radius: 5px;
               transition: all 0.3s ease-in-out;
-  
+
               li {
                 padding: 10px;
                 cursor: pointer;
                 position: relative;
-  
+
                 &::after {
                   content: "";
                   position: absolute;
@@ -493,7 +493,7 @@
                   );
                   pointer-events: none;
                 }
-  
+
                 &:hover {
                   background-color: var(--teal_700_02);
                 }
@@ -501,7 +501,7 @@
             }
           }
         }
-
+        
 
         .real__select {
           display: none;
@@ -1420,18 +1420,24 @@
     .video__play__button {
       position: absolute;
       z-index: 2;
-      right: -25%;
       top: 40%;
       width: 100%;
       display: flex;
-      justify-content: center;
+      justify-content: start;
+
+      @media only screen and (max-width: 768px) {
+        width: 100%;
+        justify-content: center;
+      }
 
       .play__button__wrapper {
+        margin-left: 70%;
         position: relative;
         width: clamp(98px, 12vw, 182px);
 
         @media only screen and (max-width: 768px) {
           width: clamp(128px, 35vw, 200px);
+          margin-left: unset;
         }
 
         .outer {
